# meu-checklist-tarefas-api

./: .pre-commit-config.yaml  .pylintrc  MVP_Michelle_Rodrigues_MeuChecklistTarefas.ipynb  Notebook Classificação - Meu Cheklist Tarefas.ipynb  README.md  README_1aEntrega.md  README_2aEntrega.md  dataset_tarefas.csv  dataset_tarefas.pkl  dependencias.txt  meu_checklit_trarefas_testes_automatizados.py  modelo_knn.joblib  modelo_naive_bayes.joblib  modelo_svm.joblib  modelo_tarefas.joblib  modelo_árvore_de_decisão.joblib  setup.py  utilizadorJobLib.py
leia-me/: Documentacao-Entrega.md  estrutura-api.txt  estrutura.txt  gerar_estrutura_projeto.py  (+1 more)
src/: config.env  gerador_joblib_base_pkl.py  gerador_joblib_base_sqlite.py  gerador_pkl_baseado_sqlite.py  jupter_notebook_colab_ml.py  jupter_notebook_colab_ml_pkl.py  machine_learning.py  machine_learning_v0.py  main.py  modelo_tarefas.joblib  pickleFileService.py  pyproject.toml  requirements.txt
src/database/: banco_tarefas.sqlite3  database.py
src/meu_checklist_tarefas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: __init__.py  base.py  categoria.py  questionario.py  usuario.py
src/routers/: autenticacao.py  categorias.py  machine_learning.py  machine_learning2.py  questionario.py  recorrencias.py  tarefas.py
src/schemas/: ConjuntoTreinamento.py  base.py  categoria.py  conjunto_treinamento.py  converters.py  datasetTarefas.py  questionario.py  usuario.py
src/security/: __init__.py  security.py
src/services/: autenticacao.py  categoriaMLService.py  categorias.py  questionario.py  tarefas.py
(+9 files in other folders)
