[project]
name = 'meu_checklist_tarefas'
requires-python = ">=3.13"
version = "1.0.0"
authors = [{name = "Mica Rodrigues", email = "mica.msr@gmail.com"}]


[tool.setuptools]
py-modules = []


[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88
ignore = "E203, W503"
select = "E,F,W,C,B,B9"
exclude = ".venv,.git,__pycache__,migrations"

[tool.pylint.MASTER]
ignore-patterns = "^migrations|^tests"
enable-all-extensions = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.MESSAGES_CONTROL]
# Desativa para todas as classes a mensagem pedindo documentação. Algumas classes/métodos/modulos são auto explicativas(os)
disable = "missing-class-docstring,missing-module-docstring,missing-function-docstring"

[tool.pylint.DESIGN]
disable = "too-few-public-methods"  # Desativa completamente
ignored-classes = "BaseModel"  # Herdadas de Pydantic
